syntax = "proto3";

package misc;

service User {
    rpc Filter (FilterRequest) returns (Reply) {}
    rpc Get (GetRequest) returns (Reply) {}
    rpc Update (UpdateRequest) returns (Reply) {}
    rpc Remove (RemoveRequest) returns (Reply) {}
}

message FilterRequest { string filter = 1; }

message GetRequest {
    int32 id = 1;
    string uuid = 2;
}

message UpdateRequest {
    int32 id = 1;
    string uuid = 2;
    string username = 3;
    int32 dept_id = 4;
    bool auth_super = 5;
}

message RemoveRequest {
    int32 id = 1;
    string uuid = 2;
}

message Reply { string data = 1; }
